[gd_scene load_steps=6 format=2]

[ext_resource path="res://objects/WeaponPickup.gd" type="Script" id=1]
[ext_resource path="res://assets/weapons/shortsword.png" type="Texture" id=2]
[ext_resource path="res://assets/shadow.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 6 )

[sub_resource type="Animation" id=2]
resource_name = "float"
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( -3, -3, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -4 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shadow:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( -2, -2, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.5 ), Color( 1, 1, 1, 0.25 ), Color( 1, 1, 1, 0.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1 ),
"transitions": PoolRealArray( -2, -2, -2, -2, 1 ),
"update": 0,
"values": [ Color( 0.956863, 0.945098, 0.0705882, 1 ), Color( 1, 1, 1, 1 ), Color( 0.956863, 0.945098, 0.0705882, 1 ), Color( 1, 1, 1, 1 ), Color( 0.956863, 0.945098, 0.0705882, 1 ) ]
}

[node name="WeaponPickup" type="Node2D" groups=[
"pickup",
]]
scale = Vector2( 4, 4 )
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.956863, 0.945098, 0.0705882, 1 )
texture = ExtResource( 2 )

[node name="Shadow" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.5 )
position = Vector2( 0, 6 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "float"
anims/float = SubResource( 2 )

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
autostart = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
